fixed navbar css and removed scrollbar
closes #165

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -15,6 +15,10 @@
     text-align: right;
 }
 
+.row {
+    margin-right: 0px !important;
+}
+
 .background-filler {
     background-image: url('/assets/img/background.jpg');
     background-size: 100%;
